[gd_scene load_steps=5 format=3 uid="uid://dqqlue8yw5xpn"]

[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="1_3dd4s"]
[ext_resource type="Script" uid="uid://bshbg4jqoeitp" path="res://settings.gd" id="1_nkug2"]

[sub_resource type="InputEventAction" id="InputEventAction_nkug2"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_3ykye"]
events = [SubResource("InputEventAction_nkug2")]

[node name="Settings" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nkug2")

[node name="SettingsLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 72
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -120.0
offset_right = 125.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_3ykye")
text = "Back"

[node name="HighscoreButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 130.0
offset_right = 525.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 35
text = "Toggle Highscores"

[node name="FPSButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 230.0
offset_right = 525.0
offset_bottom = 310.0
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 35
text = "Toggle FPS"

[node name="MusicButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 330.0
offset_right = 525.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 35
text = "Toggle Music"

[node name="DefaultButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 440.0
offset_right = 525.0
offset_bottom = 520.0
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 35
text = "Default Settings"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -530.0
offset_top = -590.0
offset_right = -80.0
offset_bottom = -510.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 40
text = "Highscores: On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPSLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -530.0
offset_top = -490.0
offset_right = -80.0
offset_bottom = -410.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 40
text = "FPS: On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -530.0
offset_top = -390.0
offset_right = -80.0
offset_bottom = -310.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 40
text = "Music: 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrightnessLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -530.0
offset_top = -280.0
offset_right = -80.0
offset_bottom = -200.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_3dd4s")
theme_override_font_sizes/font_size = 40
text = "Brightness: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="."]
offset_left = 750.0
offset_top = 375.0
offset_right = 1200.0
offset_bottom = 455.0
min_value = -26.0
max_value = 12.0
step = 2.0
value = -8.0

[node name="BrightnessSlider" type="HSlider" parent="."]
offset_left = 750.0
offset_top = 485.0
offset_right = 1200.0
offset_bottom = 565.0
min_value = 0.2
max_value = 3.0
step = 0.2
value = 1.0

[connection signal="pressed" from="BackButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HighscoreButton" to="." method="_on_highscore_button_pressed"]
[connection signal="pressed" from="FPSButton" to="." method="_on_fps_button_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="DefaultButton" to="." method="_on_default_button_pressed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
